--- a/style.css
+++ b/style.css
@@ -1136,3 +1136,78 @@ section {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#slider{
+	width: 740px;
+	height: 521px;
+	position: relative;
+	overflow: hidden;
+	float: left;
+	padding: 3px;
+	border:#666 solid 2px;
+	border-radius: 5px;
+}
+
+#slider img {
+	width: 740px;
+	height: 521px;
+}
+
+.slide{
+	position: absolute;
+}
+
+.slide-copy{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	padding: 20px;
+	background: #7f7f7f;
+	background: rgba(0, 0, 0, 0.5);
+  color: #f7f7f7;
+}
+
+#prev, #next{
+	float: left;
+	margin-top: 210px;
+	cursor: pointer;
+	position: relative;
+	z-index:100;
+	font-size: 35px;
+}
+
+#prev{
+	margin-right: -45px;
+}
+
+#next{
+	margin-left: -45px;
+}
